correcion bug alignment Ver progreso

--- a/styles/VerProgreso.css
+++ b/styles/VerProgreso.css
@@ -46,8 +46,6 @@ body {
     font-size: 18px;
 }
 
-
-
 .cuentaUsuario {
     color: rgb(255, 255, 255);
     font-size: 1.50em;
@@ -58,14 +56,13 @@ body {
     text-align: left;
     color: rgb(255, 255, 255);
     font-size: 1.50em;
-    
 }
 
-.nivel {
+.nivelN {
     text-align: center;
     color: rgb(255, 255, 255);
     font-size: 1.50em;
-    padding-top: 85%;
+    padding-top: 15%;
 }
 
 #nivel {
@@ -96,42 +93,25 @@ body {
     color: white;
 }
 
+#entrenamiento {
+    padding-left: 35%;
+    padding-top: 2%;
+}
+
 .entrenamiento {
     text-align: center;
     color: rgb(255, 255, 255);
     font-size: 1.50em;
-    padding-top: 18%;
-}
-
-#entrenamiento {
-    padding-left: 35%;
-}
-
-#entrenamiento2 {
-    text-align: center;
-    color: rgb(255, 255, 255);
-    font-size: 1.00em;
-    padding-top: 1%;
-    padding-left: 2%;
 }
 
 .fechaRegistro {
-    text-align: center;
     color: rgb(255, 255, 255);
     font-size: 1.50em;
-    padding-top: 20%;
 }
 
 #fechaRegistro {
     padding-left: 35%;
-}
-
-.fechaRegistro2 {
-    text-align: center;
-    color: rgb(255, 255, 255);
-    font-size: 1.50em;
-    padding-top: 6%;
-    padding-left: 0%;
+    padding-top: 2%;
 }
 
 table {
@@ -139,7 +119,6 @@ table {
     text-align: center;
     width: 100%;
     height: 100%;
-    
 }
 
 #tabla1 {
@@ -153,7 +132,6 @@ th {
 }
 
 #rutinaTitleID {
-    
     color: rgb(255, 255, 255);
     font-size: 1.50em;
     padding-left: 35%;
@@ -179,29 +157,32 @@ td {
 #logoID {
     padding-left: 50%;
 }
-#tituloRutina{
+
+#tituloRutina {
     font-size: 1.00em;
     padding-left: 20%;
 }
-#filaID{
+
+#filaID {
     padding-top: 4%;
-
 }
 
-#progresoID{
+#progresoID {
     padding-left: 40%;
-
 }
-#filaProgreso{
+
+#filaProgreso {
     padding-top: 3%;
 }
-#howoID{
+
+#howoID {
     color: rgb(255, 255, 255);
 }
-.tableformat{
+
+.tableformat {
     padding-left: 10%;
 }
 
-#entrenar{
+#entrenar {
     font-size: 1.50em;
 }
